--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt": "^4.3.1",
     "nuxt-llms": "0.2.0",
     "nuxt-og-image": "^5.1.13",
+    "nuxt-studio": "^1.3.2",
     "tailwindcss": "^4.1.18",
     "ufo": "^1.6.3",
     "unist-util-visit": "^5.1.0",
@@ -35,6 +36,5 @@
     "eslint": "^10.0.0",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.2.4"
-  },
-  "packageManager": "pnpm@10.29.3"
+  }
 }
